--- a/entrega-handelbars-4/package.json
+++ b/entrega-handelbars-4/package.json
@@ -1,7 +1,21 @@
 {
+  "name": "preentrega",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "sromero",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2",
-    "express-handlebars": "^7.1.2",
-    "socket.io": "^4.7.5"
+    "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
+    "socket.io": "^4.5.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "mocha": "^10.2.0",
+    "supertest": "^6.2.4"
   }
 }
